--- a/LitroGym/package.json
+++ b/LitroGym/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.7.9",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
