--- a/LitroGym/package.json
+++ b/LitroGym/package.json
@@ -20,6 +20,7 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix": "^2.15.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
